--- a/thymeleaf/security/src/main/resources/templates/fragments/header.html
+++ b/thymeleaf/security/src/main/resources/templates/fragments/header.html
@@ -1,30 +1,23 @@
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <div th:fragment="header-css">
-        <!-- this is header-css -->
-        <link href="webjars/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-              type="text/css"/>
-
-        <link href="../../css/main.css" rel="stylesheet"
-              th:href="@{/css/main.css}"/>
-    </div>
-</head>
 <body>
-<div th:fragment="header">
-    <!-- this is header -->
-    <nav class="navbar navbar-inverse">
+<th:block th:fragment="header">
+    <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/}">Spring Boot</a>
+                <a class="navbar-brand" th:href="@{/}">
+                    <img alt="some logo to show" height="30" th:src="@{/img/logo.png}" width="30"/>
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a th:href="@{/}">Home</a></li>
+                    <li class="active">
+                        <a th:href="@{/}">Home</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-</div>
-
+</th:block>
 </body>
 </html>
