--- a/thymeleaf/security/src/main/resources/templates/home.html
+++ b/thymeleaf/security/src/main/resources/templates/home.html
@@ -1,28 +1,17 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html layout:decorate="~{fragments/layout}"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Boot Thymeleaf + Spring Security</title>
-
-    <div th:replace="fragments/header :: header-css"/>
-
+    <title>Index</title>
 </head>
 <body>
-
-<div th:replace="fragments/header :: header"></div>
-
-<div class="container">
-
-    <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf + Spring Security</h1>
-        <h2>1. Visit <a th:href="@{/admin}">Admin page (Spring Security protected, Need Admin Role)</a></h2>
-        <h2>2. Visit <a th:href="@{/user}">User page (Spring Security protected, Need User Role)</a></h2>
-        <h2>3. Visit <a th:href="@{/about}">Normal page</a></h2>
-    </div>
-
+<div layout:fragment="content" th:remove="tag">
+    <h1>Hello Spring Security</h1>
+    <p>This is an unsecured page, but you can access the secured pages after authenticating.</p>
+    <ul>
+        <li>Go to the <a href="/user" th:href="@{/user}">secured pages</a></li>
+    </ul>
 </div>
-<!-- /.container -->
-
-<div th:replace="fragments/footer :: footer"></div>
-
 </body>
 </html>
