--- a/thymeleaf/security/src/main/resources/templates/login.html
+++ b/thymeleaf/security/src/main/resources/templates/login.html
@@ -38,7 +38,8 @@
 
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6">
-                            <input class="btn btn-lg btn-primary btn-block" type="submit" value="Sign In"/>
+                            <input class="btn btn-lg btn-primary btn-block"
+                                   type="submit" value="Sign In"/>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6">
                         </div>
