database auth added

--- a/thymeleaf/security/src/main/resources/templates/fragments/layout.html
+++ b/thymeleaf/security/src/main/resources/templates/fragments/layout.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" type="text/css"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}" type="text/css"/>
+    <link rel="stylesheet" th:href="@{/css/fragments/layout.css}" type="text/css"/>
 
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Spring Security Thymeleaf</title>
 </head>
