--- a/thymeleaf/blog/src/main/resources/templates/index.html
+++ b/thymeleaf/blog/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
                     <th>Autor</th>
                     <th>Título</th>
                     <th>Data</th>
+                    <th>Text</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -30,6 +31,7 @@
                     <td th:text="${post.autor}"></td>
                     <td th:text="${post.titulo}"></td>
                     <td th:text="${#dates.format(post.data, 'dd/MM/yyyy')}"></td>
+                    <td th:text="${post.texto}"></td>
                 </tr>
                 </tbody>
             </table>
