--- a/thymeleaf/security/src/main/resources/templates/error/404.html
+++ b/thymeleaf/security/src/main/resources/templates/error/404.html
@@ -1,22 +1,18 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<!--suppress HtmlRequiredLangAttribute -->
+<html layout:decorate="~{fragments/layout}"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <div th:replace="fragments/header :: header-css"/>
+    <title>Index</title>
 </head>
 <body>
-
-<div th:replace="fragments/header :: header"></div>
-
-<div class="container">
-
+<div layout:fragment="content" th:remove="tag">
     <div class="starter-template">
-        <h1>404 - page not found</h1>
+        <div class="starter-template">
+            <h1>404 - page not found</h1>
+        </div>
     </div>
-
 </div>
-
-<!-- /.container -->
-<div th:replace="fragments/footer :: footer"></div>
-
 </body>
 </html>
