--- a/thymeleaf/security/src/main/resources/templates/fragments/footer.html
+++ b/thymeleaf/security/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!--suppress HtmlRequiredLangAttribute -->
 <html xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       xmlns:th="http://www.thymeleaf.org">
 <body>
