--- a/thymeleaf/security/src/main/resources/templates/fragments/header.html
+++ b/thymeleaf/security/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<!--suppress HtmlRequiredLangAttribute -->
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block th:fragment="header">
@@ -6,7 +7,9 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" th:href="@{/}">
-                    <img alt="some logo to show" height="30" th:src="@{/img/logo.png}" width="30"/>
+                    <!--suppress CheckImageSize -->
+                    <img alt="some logo to show" height="30" src="../../static/img/fragments/logo.png"
+                         th:src="@{/img/fragments/logo.png}" width="30"/>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar">
