--- a/thymeleaf/security/src/main/resources/templates/public/about.html
+++ b/thymeleaf/security/src/main/resources/templates/public/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress HtmlRequiredLangAttribute -->
 <html layout:decorate="~{fragments/layout}"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org">
@@ -7,11 +8,9 @@
 </head>
 <body>
 <div layout:fragment="content" th:remove="tag">
-    <h1>Hello Spring Security</h1>
-    <p>This is an unsecured page, but you can access the secured pages after authenticating.</p>
-    <ul>
-        <li>Go to the <a href="/user" th:href="@{/user}">secured pages</a></li>
-    </ul>
+    <div class="starter-template">
+        <h1>Normal page (No need login)</h1>
+    </div>
 </div>
 </body>
 </html>
