--- a/thymeleaf/security/src/main/resources/templates/public/home.html
+++ b/thymeleaf/security/src/main/resources/templates/public/home.html
@@ -9,10 +9,10 @@
 <body>
 <div layout:fragment="content" th:remove="tag">
     <div class="starter-template">
-        <h1>403 - Access is denied</h1>
-        <div th:inline="text">Hello '[[${#httpServletRequest.remoteUser}]]',
-            you do not have permission to access this page.
-        </div>
+        <h1>Spring Boot Web Thymeleaf + Spring Security</h1>
+        <h2>1. Visit <a th:href="@{/admin}">Admin page (Spring Security protected, Need Admin Role)</a></h2>
+        <h2>2. Visit <a th:href="@{/user}">User page (Spring Security protected, Need User Role)</a></h2>
+        <h2>3. Visit <a th:href="@{/about}">Normal page</a></h2>
     </div>
 </div>
 </body>
