--- a/thymeleaf/security/src/main/resources/templates/public/registration.html
+++ b/thymeleaf/security/src/main/resources/templates/public/registration.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!--suppress HtmlRequiredLangAttribute -->
+<html layout:decorate="~{fragments/layout}"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example </title>
-    <div th:replace="fragments/header :: header-css"/>
+    <title>Index</title>
 </head>
 <body>
-
-<div th:replace="fragments/header :: header"></div>
-
-<div class="container">
-
+<div layout:fragment="content" th:remove="tag">
     <div class="row" style="margin-top:20px">
         <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-            <form method="post" th:action="@{/login}">
+            <form method="post" th:action="@{/templates/login}">
                 <fieldset>
                     <h1>Please Sign In</h1>
 
@@ -28,12 +26,18 @@
                     </div>
 
                     <div class="form-group">
-                        <input autofocus="true" class="form-control input-lg" id="username" name="username"
-                               placeholder="UserName" required="true" type="text"/>
+                        <label for="username">
+                            User name
+                        </label>
+                        <input autofocus="autofocus" class="form-control input-lg" id="username" name="username"
+                               placeholder="UserName" required="required" type="text"/>
                     </div>
                     <div class="form-group">
+                        <label for="password">
+                            Password
+                        </label>
                         <input class="form-control input-lg" id="password" name="password" placeholder="Password"
-                               required="true" type="password"/>
+                               required="required" type="password"/>
                     </div>
 
                     <div class="row">
@@ -48,10 +52,6 @@
             </form>
         </div>
     </div>
-
 </div>
-
-<div th:replace="fragments/footer :: footer"></div>
-
 </body>
 </html>
