--- a/thymeleaf/security/src/main/resources/templates/public/login.html
+++ b/thymeleaf/security/src/main/resources/templates/public/login.html
@@ -26,12 +26,14 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="username">
+                        <label for="email">
                             Email
                         </label>
+                        <!--id="username"-->
+                        <!--name="username"-->
                         <input autofocus="autofocus" class="form-control input-lg"
-                               id="username"
-                               name="username"
+                               id="email"
+                               name="email"
                                placeholder="some@email.com"
                                required="required" type="text"/>
                     </div>
@@ -39,8 +41,10 @@
                         <label for="password">
                             Password
                         </label>
-                        <input class="form-control input-lg" id="password"
-                               name="password" placeholder="secret"
+                        <input class="form-control input-lg"
+                               id="password"
+                               name="password"
+                               placeholder="secret"
                                required="required" type="password"/>
                     </div>
 
