spring security with dabase user authentication

--- a/thymeleaf/security/src/main/resources/templates/public/login.html
+++ b/thymeleaf/security/src/main/resources/templates/public/login.html
@@ -29,11 +29,11 @@
                         <label for="email">
                             Email
                         </label>
-                        <!--id="username"-->
-                        <!--name="username"-->
+                        <!--                        id="email"-->
+                        <!--                        name="email"-->
                         <input autofocus="autofocus" class="form-control input-lg"
-                               id="email"
-                               name="email"
+                               id="username"
+                               name="username"
                                placeholder="some@email.com"
                                required="required" type="text"/>
                     </div>
