--- a/thymeleaf/security/src/main/resources/templates/public/login.html
+++ b/thymeleaf/security/src/main/resources/templates/public/login.html
@@ -26,11 +26,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="email">
+                        <label for="username">
                             Email
                         </label>
-                        <!--                        id="email"-->
-                        <!--                        name="email"-->
                         <input autofocus="autofocus" class="form-control input-lg"
                                id="username"
                                name="username"
