--- a/thymeleaf/security/src/main/resources/templates/public/registration.html
+++ b/thymeleaf/security/src/main/resources/templates/public/registration.html
@@ -8,50 +8,65 @@
 </head>
 <body>
 <div layout:fragment="content" th:remove="tag">
-    <div class="row" style="margin-top:20px">
-        <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-            <form method="post" th:action="@{/templates/login}">
-                <fieldset>
-                    <h1>Please Sign In</h1>
+    <form method="get" th:action="@{/login}">
+        <button class="btn btn-md btn-warning btn-block" type="Submit">Go To Login Page</button>
+    </form>
 
-                    <div th:if="${param.error}">
-                        <div class="alert alert-danger">
-                            Invalid username and password.
-                        </div>
-                    </div>
-                    <div th:if="${param.logout}">
-                        <div class="alert alert-info">
-                            You have been logged out.
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <form action="#" autocomplete="off" class="form-horizontal"
+                      method="post" role="form" th:action="@{/registration}"
+                      th:object="${user}">
+                    <h2>Registration Form</h2>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <label class="validation-message" th:errors="*{name}"
+                                   th:if="${#fields.hasErrors('name')}"></label>
+                            <input class="form-control" placeholder="Name" th:field="*{name}"
+                                   type="text"/>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="username">
-                            User name
-                        </label>
-                        <input autofocus="autofocus" class="form-control input-lg" id="username" name="username"
-                               placeholder="UserName" required="required" type="text"/>
+                        <div class="col-sm-9">
+                            <label class="validation-message" th:errors="*{lastName}"
+                                   th:if="${#fields.hasErrors('lastName')}"></label>
+                            <input class="form-control" placeholder="Last Name"
+                                   th:field="*{lastName}" type="text"/>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label for="password">
-                            Password
-                        </label>
-                        <input class="form-control input-lg" id="password" name="password" placeholder="Password"
-                               required="required" type="password"/>
+                        <div class="col-sm-9">
+                            <input class="form-control" placeholder="Email" th:field="*{email}"
+                                   type="text"/> <label
+                                class="validation-message" th:errors="*{email}"
+                                th:if="${#fields.hasErrors('email')}"></label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <input class="form-control" placeholder="Password"
+                                   th:field="*{password}" type="password"/> <label
+                                class="validation-message" th:errors="*{password}"
+                                th:if="${#fields.hasErrors('password')}"></label>
+                        </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6">
-                            <input class="btn btn-lg btn-primary btn-block"
-                                   type="submit" value="Sign In"/>
-                        </div>
-                        <div class="col-xs-6 col-sm-6 col-md-6">
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <button class="btn btn-primary btn-block" type="submit">Register User</button>
                         </div>
                     </div>
-                </fieldset>
-            </form>
+
+                    <span th:utext="${successMessage}"></span>
+
+
+                </form>
+            </div>
         </div>
     </div>
+
 </div>
 </body>
 </html>
